styles/custom-css/admin-employee.css
/************************************************************************************
   Please Do Not Touch My Codes Without Permmision! 
        Dont Spoil My Work Please
            ************ Author ***********

                github : augustBemsen
                slack : august
                email : danireptor7@gmail.com
            
            ************ CodeBoy **********
       You can borrow, copy and paste is not a crime! 
   But do not ulter! Read access only! I am warning you
************************************************************************************/

*{
    box-sizing: border-box;
}

body {
    font-family: 'Poppins', sans-serif;
}

/* ================================= 
  Page Components
==================================== */

.form {
    background-color: white;
}
.sub-text {
    padding: 0 !important;
    margin-bottom: 0 !important;
}
.search-icon {
    color: black;
    font-size: medium;
}

.icon {
    color: black;
}

.hired-btn {
    width: 7rem;
    background-color: #042241;
    color: white;
    border-radius: 0.3rem;
    padding: 0.3rem 0;
}
.hired-btn:hover {
    color: #A7A7A7;
}
.available-btn {
    width: 7rem;
    background-color: #33BEFF;
    color: white;
    border-color: #33BEFF;
    border-radius: 0.3rem;
    padding: 0.3rem 0;
}

.unavailable-btn {
    width: 7rem;
    background-color: #A7A7A7;
    color: white;
    border-color: #A7A7A7;
    border-radius: 0.3rem;
    padding: 0.3rem 0;
}



/* ================================= 
  Mobile Section
==================================== */

/* Small devices (landscape phones)  */
@media (max-width: 576px) { 
    .btn {
        width: 5.2rem;
        font-size: .8rem;
    }
    .sub-text {
        font-size: .65rem;
    }
    .name-text {
        font-size: .8.5rem;
    }
    .hide-date {
        display: none;
    }
    .table-responsive {
        overflow-x: hidden;
    }
 }

 @media (max-width: 315px) {
    .btn {
        width: 4.6rem;
        font-size: .6rem;
    }
 }

 @media (max-width: 300px) {
    .btn {
        width: 4rem;
        font-size: .6rem;
    }
    .sub-text {
        font-size: .5rem;
    }
    .name-text {
        font-size: .6.5rem;
    }
    .employee-hero {
        padding: 0 !important;
        margin: 0 !important;
        width: 90px;
    }
    .employee-span {
        width: 40px;
        padding-top: .5rem;
        font-size: .6rem;
    }
    td {
        padding-right: .8rem !important;
    }
       
 }

/* Medium devices */

@media (max-width: 280px) { 
    th, tr {
        white-space: normal !important;
    }
    .sub-text {
        padding: 0 !important;
        font-size: .5rem;
    }
    .name-text {
        font-size: .6.5rem;
    }
    .employee-span {
        width: 60%;
        padding-top: .5rem;
        font-size: .6rem;
    }
 }

